--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_brewdog_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.ContentActivity"></activity>
-        <activity android:name=".View.ListActivity">
+        <activity android:name=".View.ContentActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".View.ListActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
